--- a/Galaxy2.SaveData.CLI/Galaxy2.SaveData.CLI.csproj
+++ b/Galaxy2.SaveData.CLI/Galaxy2.SaveData.CLI.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Galaxy2.SaveData.Json</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
